--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jquery": "^3.3.1",
     "marked": "^0.3.19",
     "react": "^16.3.1",
+    "react-disqus-comments": "^1.2.0",
     "react-dom": "^16.3.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
